# StickyClock

./: AboutDialog.cpp  AboutDialog.h  AutoHideDelayHints.h  Button.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorButton.cpp  ColorButton.h  ColorDialog.cpp  ConfigButton.cpp  ConfigButton.h  ConfigDialog.cpp  ConfigDialog.h  DesktopPreferenceHints.h  DisplayHelper.cpp  DisplayHelper.h  FontSizeHints.h  Global.h  MoveButton.cpp  MoveButton.h  OpacityHints.h  PinButton.cpp  PinButton.h  QuitButton.cpp  QuitButton.h  README.md  RecentsHelper.cpp  RecentsHelper.h  SettingsHelper.cpp  SettingsHelper.h  SizeButton.cpp  SizeButton.h  StickyClock.cpp  StickyClock.desktop  StickyClock.h  StickyWidgetIII.cpp  StickyWidgetIII.h  StickyWindow.cpp  StickyWindow.h  (+6 more)
cmake/: cmake_uninstall.cmake.in
